add all the things
