# app/config/services/swagger.yaml
@@ -16,6 +16,25 @@ paths:
                 $ref: "#/components/schemas/NextUpResponse"
             application/ld+json: *episodeResponse
             text/html: *episodeResponse
+  /api/series/{seriesId}:
+    delete:
+      tags:
+        - Series
+      summary: Remove a series
+      operationId: removeSeries
+      parameters:
+        - name: seriesId
+          in: path
+          required: true
+          description: TVDB Series ID
+          example: 987123
+          schema:
+            type: string
+      produces:
+        - application/json
+      responses:
+        204:
+          description: Series removed
   /api/tvdb/search:
     get:
       tags:
